--- a/src/css/blocks/header.css
+++ b/src/css/blocks/header.css
@@ -1,9 +1,9 @@
-.header {
+header {
     grid-area: header;
     text-align: center;
     display: flex;
 }
-.header h1 {
+header h1 {
     font-size: 2.5rem;
     font-weight: bold;
     margin: auto;
