--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,9 @@
 @import url('./core.css');
+@import url('./variables.css');
 @import url('blocks/header.css');
 @import url('blocks/textbox.css');
 @import url('blocks/appending.css');
 @import url('blocks/list.css');
 @import url('blocks/control.css');
 @import url('blocks/footer.css');
+@import url('blocks/pop-up.css');
